Apply suggestions from code review
Co-authored-by: Rolfe Dlugy-Hegwer <rolfedh@users.noreply.github.com>

--- a/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
+++ b/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
@@ -52,11 +52,11 @@ The {image-puller-name-short} provides the following parameters for configuratio
 |`k8s-image-puller`
 
 |`IMAGES`
-|Semicolon separated list of images to pull, in the format `__<name1>__=__<image1>__;__<name2>__=__<image2>__` See xref:defining-the-list-of-images-to-pull.adoc[].
+|Semicolon-separated list of images to pull, in the format `__<name1>__=__<image1>__;__<name2>__=__<image2>__`. See xref:defining-the-list-of-images-to-pull.adoc[].
 |
 
 |`NODE_SELECTOR`
-|Node selector to apply to the Pods created by the DaemonSet
+|Node selector to apply to the pods created by the DaemonSet
 |`'{}'`
 
 | `AFFINITY`
