--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
@@ -3,10 +3,10 @@
 :keywords: administration-guide, image-puller, openshift, openshift-templates, CLI
 :page-aliases: .:installing-image-puller-on-openshift-using-openshift-templates,installing-image-puller-on-openshift-using-openshift-templates
 
-[id="installing-image-puller-on-openshift-using-cli_{context}"]
-= Installing {image-puller-name-short} on OpenShift using CLI
+[id="installing-image-puller-on-openshift-by-using-the-cli_{context}"]
+= Installing {image-puller-name-short} on OpenShift by using the CLI
 
-This procedure describes how to install the {image-puller-name} on OpenShift using OpenShift `oc` management tool.
+You can install the {image-puller-name} on OpenShift by using OpenShift `oc` management tool.
 
 .Prerequisites
 
