Apply suggestions from code review

--- a/modules/administration-guide/pages/upgrading-che-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-web-console.adoc
@@ -6,7 +6,7 @@
 [id="upgrading-{prod-id-short}-using-the web console_{context}"]
 = Upgrading {prod-short} using the web console
 
-This section describes how to mannually approve an upgrade from an earlier minor version using the {prod} Operator from the Red Hat Ecosystem Catalog in the OpenShift web console.
+You can manually approve an upgrade from an earlier minor version using the {prod} Operator from the Red Hat Ecosystem Catalog in the OpenShift web console.
 
 .Prerequisites
 
