--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-the-web-console.adoc
@@ -6,7 +6,7 @@
 [id="installing-image-puller-on-openshift-by-using-the-web-console_{context}"]
 = Installing {image-puller-name-short} on OpenShift by using the web console
 
-This procedure describes how to install the {image-puller-operator-name} on OpenShift using the OpenShift web console.
+You can install the {image-puller-operator-name} on OpenShift using the OpenShift web console.
 
 .Prerequisites
 
