--- a/modules/administration-guide/pages/specifying-the-update-approval-strategy.adoc
+++ b/modules/administration-guide/pages/specifying-the-update-approval-strategy.adoc
@@ -15,7 +15,7 @@ New updates will be installed as soon as they become available.
 `Manual`::
 New updates need to be manually approved before installation begins.
 
-This section describes how to specifying the {prod-short} operator update approval strategy using the OpenShift web console.
+You can specify the {prod-short} operator update approval strategy using the OpenShift web console.
 
 .Prerequisites
 
