--- a/modules/administration-guide/pages/specifying-the-update-approval-strategy.adoc
+++ b/modules/administration-guide/pages/specifying-the-update-approval-strategy.adoc
@@ -10,7 +10,7 @@
 The {prod-short} operator supports two upgrade strategies:
 
 `Automatic`::
-New updates will be installed as soon as they become available.
+The Operator installs new updates when they become available.
 
 `Manual`::
 New updates need to be manually approved before installation begins.
