fix: clarification for maven users

--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -55,7 +55,8 @@ Defaults to `file`.
 
 .Mounting a Secret as a file
 ====
-[source,yaml,subs="+quotes"]
+
+[source,yaml,subs="+quotes,+attributes"]
 ----
 apiVersion: v1
 kind: Secret
@@ -71,4 +72,12 @@ data:
 ----
 
 When you start a workspace, the `/home/user/.m2/settings.xml` file will be available in the `{devworkspace}` containers.
+
+Maven allows you to set a custom path for `settings.xml`.
+For example:
+[subs="+quotes,+attributes"]
+----
+`$ mvn --settings /home/user/.m2/settings.xml clean install`
+----
+
 ====
