Apply suggestions from code review

--- a/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
+++ b/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
@@ -24,19 +24,19 @@ The {image-puller-name-short} provides the following parameters for configuratio
 |`"1"`
 
 |`CACHING_MEMORY_REQUEST`
-|The memory request for each cached image when the puller is running. See xref:defining-the-memory-parameters-for-the-image-puller.adoc[].
+|The memory request for each cached image while the puller is running. See xref:defining-the-memory-parameters-for-the-image-puller.adoc[].
 |`10Mi`
 
 |`CACHING_MEMORY_LIMIT`
-|The memory limit for each cached image when the puller is running. See xref:defining-the-memory-parameters-for-the-image-puller.adoc[].
+|The memory limit for each cached image while the puller is running. See xref:defining-the-memory-parameters-for-the-image-puller.adoc[].
 |`20Mi`
 
 |`CACHING_CPU_REQUEST`
-|The processor request for each cached image when the puller is running
+|The processor request for each cached image while the puller is running
 |`.05` or 50 millicores
 
 |`CACHING_CPU_LIMIT`
-|The processor limit for each cached image when the puller is running
+|The processor limit for each cached image while the puller is running
 |`.2` or 200 millicores
 
 |`DAEMONSET_NAME`
