--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -73,7 +73,7 @@ data:
 
 When you start a workspace, the `/home/user/.m2/settings.xml` file will be available in the `{devworkspace}` containers.
 
-Maven allows you to set a custom path for `settings.xml`.
+Maven allows you to set a custom path for the `settings.xml` file.
 For example:
 [subs="+quotes,+attributes"]
 ----
