--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -77,7 +77,7 @@ With Maven, you can set a custom path for the `settings.xml` file.
 For example:
 [subs="+quotes,+attributes"]
 ----
-`$ mvn --settings /home/user/.m2/settings.xml clean install`
+$ mvn --settings /home/user/.m2/settings.xml clean install
 ----
 
 ====
