--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-the-web-console.adoc
@@ -20,5 +20,5 @@ You can install the {image-puller-operator-name} on OpenShift using the OpenShif
 
 . Install the {image-puller-operator-name}. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/operators/admin/olm-adding-operators-to-cluster.html#olm-installing-from-operatorhub-using-web-console_olm-adding-operators-to-a-cluster[Installing from OperatorHub using the web console].
 
-. Create a *{image-puller-deployment-name}* `{image-puller-cr-name}` operand from the {image-puller-operator-name}. See https://docs.openshift.com/container-platform/4.10/operators/user/olm-creating-apps-from-installed-operators.html[Creating applications from installed Operators].
+. Create a {image-puller-deployment-name} `{image-puller-cr-name}` operand from the {image-puller-operator-name}. See https://docs.openshift.com/container-platform/4.10/operators/user/olm-creating-apps-from-installed-operators.html[Creating applications from installed Operators].
 
