fix: clarification, "using the OpenShift web console" (#2326)
Co-authored-by: Rolfe Dlugy-Hegwer <rolfedh@users.noreply.github.com>

--- a/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
+++ b/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
@@ -18,52 +18,52 @@ The {image-puller-name-short} provides the following parameters for configuratio
 |===
 |Parameter |Usage |Default
 
-|`CACHING_INTERVAL_HOURS` 
+|`CACHING_INTERVAL_HOURS`
 
 |DaemonSets health checks interval in hours
 |`"1"`
 
-|`CACHING_MEMORY_REQUEST` 
-|The memory request for each cached image when the puller is running. See xref:defining-the-memory-parameters-for-the-image-puller.adoc[].
+|`CACHING_MEMORY_REQUEST`
+|The memory request for each cached image while the puller is running. See xref:defining-the-memory-parameters-for-the-image-puller.adoc[].
 |`10Mi`
 
-|`CACHING_MEMORY_LIMIT` 
-|The memory limit for each cached image when the puller is running. See xref:defining-the-memory-parameters-for-the-image-puller.adoc[].
+|`CACHING_MEMORY_LIMIT`
+|The memory limit for each cached image while the puller is running. See xref:defining-the-memory-parameters-for-the-image-puller.adoc[].
 |`20Mi`
 
-|`CACHING_CPU_REQUEST` 
-|The processor request for each cached image when the puller is running 
+|`CACHING_CPU_REQUEST`
+|The processor request for each cached image while the puller is running
 |`.05` or 50 millicores
 
-|`CACHING_CPU_LIMIT` 
-|The processor limit for each cached image when the puller is running 
+|`CACHING_CPU_LIMIT`
+|The processor limit for each cached image while the puller is running
 |`.2` or 200 millicores
 
-|`DAEMONSET_NAME` 
+|`DAEMONSET_NAME`
 |Name of DaemonSet to create
 |`{image-puller-deployment-name}`
 
-|`DEPLOYMENT_NAME` 
+|`DEPLOYMENT_NAME`
 |Name of the Deployment to create
 |`{image-puller-deployment-name}`
 
-|`NAMESPACE` 
+|`NAMESPACE`
 |{platforms-namespace} containing DaemonSet to create
 |`k8s-image-puller`
 
-|`IMAGES` 
-|Semicolon separated list of images to pull, in the format `__<name1>__=__<image1>__;__<name2>__=__<image2>__` See xref:defining-the-list-of-images-to-pull.adoc[].
+|`IMAGES`
+|Semicolon-separated list of images to pull, in the format `__<name1>__=__<image1>__;__<name2>__=__<image2>__`. See xref:defining-the-list-of-images-to-pull.adoc[].
 |
 
-|`NODE_SELECTOR` 
-|Node selector to apply to the Pods created by the DaemonSet 
+|`NODE_SELECTOR`
+|Node selector to apply to the pods created by the DaemonSet
 |`'{}'`
 
-| `AFFINITY` 
-| Affinity applied to pods created by the DaemonSet 
+| `AFFINITY`
+| Affinity applied to pods created by the DaemonSet
 | `'{}'`
 
-|`IMAGE_PULL_SECRETS` 
+|`IMAGE_PULL_SECRETS`
 | List of image pull secrets, in the format `pullsecret1;...` to add to pods created by the DaemonSet. Those secrets need to be in the image puller's namespace and a cluster administrator must create them.
 | `""`
 |===
@@ -73,8 +73,8 @@ The {image-puller-name-short} provides the following parameters for configuratio
 
 * xref:defining-the-list-of-images-to-pull.adoc[]
 * xref:defining-the-memory-parameters-for-the-image-puller.adoc[].
-* xref:installing-image-puller-on-openshift-using-operatorhub.adoc[]
-* xref:installing-image-puller-on-openshift-using-openshift-templates.adoc[]
+* xref:installing-image-puller-on-openshift-using-the-web-console.adoc[]
+* xref:installing-image-puller-on-openshift-using-cli.adoc[]
 
 * link:https://github.com/che-incubator/{image-puller-repository-name}[{image-puller-name} source code repository]
 
