--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
@@ -1,19 +1,20 @@
 :_content-type: PROCEDURE
-:navtitle: Installing using OpenShift templates
+:navtitle: Installing {image-puller-name-short} on OpenShift using CLI
 :keywords: administration-guide, image-puller, openshift, openshift-templates, CLI
-:page-aliases: .:installing-image-puller-on-openshift-using-openshift-templates
+:page-aliases: .:installing-image-puller-on-openshift-using-openshift-templates,installing-image-puller-on-openshift-using-openshift-templates
 
-[id="installing-image-puller-on-openshift-using-openshift-templates_{context}"]
-= Installing {image-puller-name-short} on OpenShift using OpenShift templates
+[id="installing-image-puller-on-openshift-by-using-the-cli_{context}"]
+= Installing {image-puller-name-short} on OpenShift by using the CLI
 
-This procedure describes how to install the {image-puller-name} on OpenShift using OpenShift templates.
+You can install the {image-puller-name} on OpenShift by using OpenShift `oc` management tool.
 
 .Prerequisites
 
-* A running OpenShift cluster.
-* The `oc` tool is available.
 * xref:defining-the-list-of-images-to-pull.adoc[].
+
 * xref:defining-the-memory-parameters-for-the-image-puller.adoc[].
+
+* An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
 
 .Procedure
 
