--- a/modules/administration-guide/partials/proc_enabling-and-exposing-che-metrics.adoc
+++ b/modules/administration-guide/partials/proc_enabling-and-exposing-che-metrics.adoc
@@ -19,7 +19,7 @@ spec:
 +
 [NOTE]
 ====
-When {prod} is installed from the OperatorHub using the default `CheCluster` CR, `spec.metrics.enable` is set to `true` by default. For example:
+`spec.metrics.enable` is set to `true` by default. For example:
 
 image::monitoring/monitoring-che-che-cluster-cr.png[link="{imagesdir}/monitoring/monitoring-che-che-cluster-cr.png"[]
 
