CRC and CRW renaming - implementing feedback

--- a/modules/administration-guide/partials/proc_using-openshift-web-console-to-install-che-on-red-hat-openshift-local.adoc
+++ b/modules/administration-guide/partials/proc_using-openshift-web-console-to-install-che-on-red-hat-openshift-local.adoc
@@ -46,5 +46,4 @@ $ crc console
 .Additional resources
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_openshift_local/[Product documentation for Red Hat OpenShift Local].
-* link:https://github.com/code-ready/crc[Red Hat OpenShift Local
- on GitHub].
+* link:https://github.com/code-ready/crc[Red Hat OpenShift Local on GitHub].
