--- a/modules/administration-guide/pages/installing-che-on-red-hat-openshift-local.adoc
+++ b/modules/administration-guide/pages/installing-che-on-red-hat-openshift-local.adoc
@@ -1,7 +1,7 @@
 :_content-type: ASSEMBLY
 :navtitle: Installing {prod-short} on Red Hat OpenShift Local
-:keywords: overview, installing-che-on-red-hat-open-shift-local
-:page-aliases: installation-guide:installing-che-on-red-hat-open-shift-local, overview:installing-che-on-red-hat-open-shift-local
+:keywords: overview, installing, installation, local
+:page-aliases: installation-guide:installing-che-on-codeready-containers, overview:installing-che-on-codeready-containers, installing-che-on-codeready-containers
 
 :parent-context-of-installing-che-on-red-hat-open-shift-local: {context}
 
