--- a/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
+++ b/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
@@ -14,7 +14,7 @@ Create a `product.json` file with a new name of the product, logo, description, 
 [source,json,attrs="nowrap"]
 ----
 {
-    "name": "Red Hat Dev Spaces",  <1>
+    "name": "Red Hat OpenShift Dev Spaces",  <1>
     "icon": "devspaces-icon.png", <2>
     "logo": {                                <3>
         "dark": "devspaces-logo-light.png",
