--- a/modules/administration-guide/pages/specifying-the-update-approval-strategy.adoc
+++ b/modules/administration-guide/pages/specifying-the-update-approval-strategy.adoc
@@ -3,7 +3,7 @@
 :keywords: administration guide, upgrading-che-using-operatorhub
 :page-aliases: installation-guide:upgrading-che-using-operatorhub
 
-[id="specifying-the-{prod-id-short}-operator-update-approval-strategy-using-the web-console_{context}"]
+[id="specifying-the-{prod-id-short}-operator-update-approval-strategy-using-the-web-console_{context}"]
 = Specifying the {prod-short} operator update approval strategy using the web console
 
 
