implementing changes in regards to attributes

--- a/modules/administration-guide/pages/installing-che-on-red-hat-openshift-local.adoc
+++ b/modules/administration-guide/pages/installing-che-on-red-hat-openshift-local.adoc
@@ -1,17 +1,17 @@
 :_content-type: ASSEMBLY
-:navtitle: Installing {prod-short} on Red Hat OpenShift Local
+:navtitle: Installing {prod-short} on {rh-os-local}
 :keywords: overview, installing, installation, local
 :page-aliases: installation-guide:installing-che-on-codeready-containers, overview:installing-che-on-codeready-containers, installing-che-on-codeready-containers
 
 :parent-context-of-installing-che-on-red-hat-open-shift-local: {context}
 
 [id="installing-{prod-id-short}-on-red-hat-open-shift-local_{context}"]
-= Installing {prod-short} on Red Hat OpenShift Local
+= Installing {prod-short} on {rh-os-local}
 
 
 :context: installing-{prod-id-short}-on-red-hat-open-shift-local
 
-This chapter describes the creation of a single-node OpenShift cluster for deploying a {prod-short} instance using Red Hat OpenShift Local. To install {prod-short}, use the`{prod-cli}` command-line tool or the OpenShift web console GUI.
+This chapter describes the creation of a single-node OpenShift cluster for deploying a {prod-short} instance using {rh-os-local}. To install {prod-short}, use the`{prod-cli}` command-line tool or the OpenShift web console GUI.
 
 include::partial$proc_using-chectl-to-install-che-on-red-hat-openshift-local.adoc[leveloffset=+1]
 
