--- a/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
+++ b/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
@@ -14,20 +14,20 @@ Create a `product.json` file with a new name of the product, logo, description, 
 [source,json,attrs="nowrap"]
 ----
 {
-    "name": "Red Hat OpenShift Dev Spaces",  <1>
-    "icon": "devspaces-icon.png", <2>
-    "logo": {                                <3>
-        "dark": "devspaces-logo-light.png",
-        "light": "devspaces-logo-dark.png"
+    "name": "Red Hat OpenShift Dev Spaces",
+    "icon": "icon.png",
+    "logo": {
+        "dark": "logo-light.png",
+        "light": "logo-dark.png"
     },
-    "welcome": {                             <4>
+    "welcome": {
         "title": "Welcome to Your Workspace",
         "links": ["website", "documentation"]
     },
-    "links": {                               <5>
+    "links": {
         "website": {
-            "name": "Discover Red Hat Dev Spaces",
-            "url": "https://developers.redhat.com/products/openshift_dev_spaces/overview"
+            "name": "Discover Red Hat OpenShift Dev Spaces",
+            "url": "https://developers.redhat.com/products/devspaces/overview"
         },
         "documentation": {
             "name": "Browse Documentation",
@@ -35,6 +35,7 @@ Create a `product.json` file with a new name of the product, logo, description, 
         }
     }
 }
+
 ----
 <1> `name`: tab title for the *Welcome* page and the *About* dialog.
 <2> `icon`: icon for the *Welcome* page tab title.
