--- a/modules/administration-guide/partials/proc_using-openshift-web-console-to-install-che-on-red-hat-openshift-local.adoc
+++ b/modules/administration-guide/partials/proc_using-openshift-web-console-to-install-che-on-red-hat-openshift-local.adoc
@@ -1,13 +1,13 @@
 [id="using-openshift-web-console-to-install-{prod-id-short}-on-red-hat-openshift-local_{context}"]
-= Using the OpenShift web console to install {prod-short} on Red Hat OpenShift Local
+= Using the OpenShift web console to install {prod-short} on {rh-os-local}
 
 .Prerequisites
 
-* An installation of Red Hat OpenShift Local. See link:https://cloud.redhat.com/openshift/install/crc/installer-provisioned[Installing Red Hat OpenShift Local].
+* An installation of {rh-os-local}. See link:https://cloud.redhat.com/openshift/install/crc/installer-provisioned[Installing {rh-os-local}].
 
 .Procedure 
 
-. To configure your host machine for Red Hat OpenShift Local, run:
+. To configure your host machine for {rh-os-local}, run:
 +
 ----
 $ crc setup
@@ -19,7 +19,7 @@ $ crc setup
 $ crc delete
 ----
 
-. To start the Red Hat OpenShift Local virtual machine with at least 12 GB of RAM, run:
+. To start the {rh-os-local} virtual machine with at least 12 GB of RAM, run:
 +
 ----
 $ crc start --memory 12288
@@ -45,5 +45,5 @@ $ crc console
 
 .Additional resources
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_openshift_local/[Product documentation for Red Hat OpenShift Local].
-* link:https://github.com/code-ready/crc[Red Hat OpenShift Local on GitHub].
+* link:https://access.redhat.com/documentation/en-us/red_hat_openshift_local/[Product documentation for {rh-os-local}].
+* link:https://github.com/code-ready/crc[{rh-os-local} on GitHub].
