--- a/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
+++ b/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
@@ -16,7 +16,7 @@ Create a `product.json` file with a new name of the product, logo, description, 
 {
     "name": "Red Hat OpenShift Dev Spaces",
     "icon": "icon.png",
-    "logo": {
+    "logo": { <3>
         "dark": "logo-light.png",
         "light": "logo-dark.png"
     },
