--- a/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
+++ b/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
@@ -20,7 +20,7 @@ Create a `product.json` file with a new name of the product, logo, description, 
         "dark": "logo-light.png",
         "light": "logo-dark.png"
     },
-    "welcome": {
+    "welcome": { <4>
         "title": "Welcome to Your Workspace",
         "links": ["website", "documentation"]
     },
