--- a/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
+++ b/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
@@ -24,7 +24,7 @@ Create a `product.json` file with a new name of the product, logo, description, 
         "title": "Welcome to Your Workspace",
         "links": ["website", "documentation"]
     },
-    "links": {
+    "links": { <5>
         "website": {
             "name": "Discover Red Hat OpenShift Dev Spaces",
             "url": "https://developers.redhat.com/products/openshift-dev-spaces/overview"
