--- a/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
+++ b/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
@@ -26,7 +26,7 @@ Create a `product.json` file with a new name of the product, logo, description, 
     },
     "links": { <5>
         "website": {
-            "name": "Discover Red Hat OpenShift Dev Spaces",
+            "name": "Discover {rh-os-devspaces}",
             "url": "https://developers.redhat.com/products/openshift-dev-spaces/overview"
         },
         "documentation": {
