--- a/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
+++ b/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
@@ -11,7 +11,7 @@ This section describes how to customize definitions of basic branding elements o
 
 Create a `product.json` file with a new name of the product, logo, description, and list of hyperlinks on the *Welcome* page (an example of link:https://raw.githubusercontent.com/che-samples/che-theia-branding-example/master/branding/product.json[`product.json`]:
 
-[source,json,attrs="nowrap"]
+[source,json,attrs="nowrap",subs="+attributes"]
 ----
 {
     "name": "Red Hat OpenShift Dev Spaces",
