--- a/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
+++ b/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
@@ -14,8 +14,8 @@ Create a `product.json` file with a new name of the product, logo, description, 
 [source,json,attrs="nowrap",subs="+attributes"]
 ----
 {
-    "name": "Red Hat OpenShift Dev Spaces",
-    "icon": "icon.png",
+    "name": "{rh-os-devspaces}", <1>
+    "icon": "icon.png", <2>
     "logo": { <3>
         "dark": "logo-light.png",
         "light": "logo-dark.png"
