--- a/modules/administration-guide/pages/installing-che-on-red-hat-openshift-local.adoc
+++ b/modules/administration-guide/pages/installing-che-on-red-hat-openshift-local.adoc
@@ -1,7 +1,7 @@
 :_content-type: PROCEDURE
 :navtitle: Installing {prod-short} on {rh-os-local}
 :keywords: overview, installing, installation, local
-:page-aliases: installation-guide:installing-che-on-codeready-containers, overview:installing-che-on-codeready-containers
+:page-aliases: installation-guide:installing-che-on-codeready-containers, overview:installing-che-on-codeready-containers, installing-che-on-codeready-containers
 
 :parent-context-of-installing-che-on-red-hat-openshift-local: {context}
 
