--- a/modules/administration-guide/partials/proc_building-a-che-theia-container-image-with-custom-branding.adoc
+++ b/modules/administration-guide/partials/proc_building-a-che-theia-container-image-with-custom-branding.adoc
@@ -21,8 +21,8 @@ This section describes how to build a Che-Theia container image with custom bran
 +
 [subs="+attributes,+quotes"]
 ----
-$ docker build -t username/che-theia-devspaces:next .
-$ docker push username/che-theia-devspaces:next
+$ {docker-cli} build -t username/che-theia-devspaces:next .
+$ {docker-cli} push username/che-theia-devspaces:next
 ----
 
 
