--- a/RELEASE.adoc
+++ b/RELEASE.adoc
@@ -1,5 +1,65 @@
 :toc:
 
-= Releasing Eclipse Che documentation
+= Releasing Eclipse Che Documentation
 
-See link:https://github.com/eclipse/che-docs/blob/main/RELEASE.adoc[]
+== Release workflow automation
+
+The xref:.github/workflows/release.yml[`release.yml`] workflow implements and performs release procedures for the Eclipse Che Documentation, using the xref:make-release.sh[`make-release.sh`] script.
+
+The publication is decoupled. See link:https://github.com/eclipse-che/che-docs/tree/publication-builder[Publishing Eclipse Che documentation].
+
+
+== Releasing a major or minor version
+
+.Prerequisites
+
+* Define the Eclipse Che version to release: `__<major>__.__<minor>__.0`.
+
+.Procedure
+
+. Create the `__<major>__.__<minor>__.x` branch from the prerelease branch.
+
+. Edit the `antora.yml` file in the `__<major>__.__<minor>__.x` branch to define:
++
+[source,yaml,subs="+attributes,+quotes"]
+----
+prerelease: false
+version: stable
+asciidoc:
+  attributes:
+    prod-ver-patch: "_<major>_._<minor>_.0"
+    prod-ver: "_<major>_._<minor>_"
+    prod-ver-major: "_<major>_"
+----
+
+. Edit the link:https://github.com/eclipse-che/che-docs/blob/publication-builder/publication-builder-antora-playbook.yml[`publication-builder-antora-playbook.yml` file in the `publication-builder` branch]. Change the latest branch to "__<major>__.__<minor>__.x". Keep the other branches (`7.43.x` and `master`).
++
+[source,yaml,subs="+attributes,+quotes"]
+----
+# [...]
+content:
+  sources:
+    - url: https://github.com/eclipse-che/che-docs
+      branches:
+        - "__<major>__.__<minor>__.x"
+        - "7.41.x"
+        - master
+# [...]
+----
+
+== Releasing a patch version
+
+.Prerequisites
+
+* Define the stable `__<major>__.__<minor>__.__<patch>__` Eclipse Che version to release.
+
+.Procedure
+
+. Define `asciidoc.attributes.prod-ver-patch` in the `antora.yml` file in the `__<major>__.__<minor>__.x` branch:
++
+[source,yaml,subs="+attributes,+quotes"]
+----
+asciidoc:
+  attributes:
+    prod-ver-patch: "__<major>__.__<minor>__.__<patch>__"
+----
