fix: attributes in code block

--- a/modules/administration-guide/pages/using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc
+++ b/modules/administration-guide/pages/using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc
@@ -19,7 +19,7 @@ To deploy {prod-short} with a suitable configuration, edit the `CheCluster` Cust
 * Create a `che-operator-cr-patch.yaml` YAML file that contains the subset of the `CheCluster` Custom Resource to configure:
 +
 ====
-[source,yaml,subs="+quotes"]
+[source,yaml,subs="+attributes,+quotes"]
 ----
 spec:
   __<component>__:
@@ -28,7 +28,7 @@ spec:
 ====
 * Deploy {prod-short} and apply the changes described in `che-operator-cr-patch.yaml` file:
 +
-[subs="+quotes"]
+[subs="+attributes,+quotes"]
 ----
 $ {prod-cli} server:deploy \
 --che-operator-cr-patch-yaml=che-operator-cr-patch.yaml \
