fix: consistency in describing how to configure the operand.

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -66,6 +66,7 @@
 **** xref:configuring-oauth-2-for-github.adoc[]
 **** xref:configuring-oauth-2-for-gitlab.adoc[]
 **** xref:configuring-oauth-1-for-bitbucket.adoc[]
+*** xref:configuring-the-administrative-user.adoc[]
 *** xref:removing-user-data.adoc[]
 * xref:upgrading-che.adoc[]
 ** xref:upgrading-the-chectl-management-tool.adoc[]
