--- a/modules/administration-guide/pages/using-the-cli-to-configure-the-checluster-custom-resource.adoc
+++ b/modules/administration-guide/pages/using-the-cli-to-configure-the-checluster-custom-resource.adoc
@@ -20,7 +20,7 @@ To configure a running instance of {prod-short}, edit the `CheCluster` Custom Re
 +
 [subs="+attributes"]
 ----
-$ {orch-cli} edit checluster/eclipse-che -n {prod-namespace}
+$ {orch-cli} edit checluster/{prod-checluster} -n {prod-namespace}
 ----
 
 . Save and close the file to apply the changes.
