--- a/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
+++ b/modules/administration-guide/partials/proc_defining-custom-branding-values-for-che-theia.adoc
@@ -11,23 +11,23 @@ This section describes how to customize definitions of basic branding elements o
 
 Create a `product.json` file with a new name of the product, logo, description, and list of hyperlinks on the *Welcome* page (an example of link:https://raw.githubusercontent.com/che-samples/che-theia-branding-example/master/branding/product.json[`product.json`]:
 
-[source,json,attrs="nowrap"]
+[source,json,attrs="nowrap",subs="+attributes"]
 ----
 {
-    "name": "Red Hat CodeReady Workspaces",  <1>
-    "icon": "codeready-workspaces-icon.png", <2>
-    "logo": {                                <3>
-        "dark": "codeready-workspaces-logo-light.png",
-        "light": "codeready-workspaces-logo-dark.png"
+    "name": "{rh-os-devspaces}", <1>
+    "icon": "icon.png", <2>
+    "logo": { <3>
+        "dark": "logo-light.png",
+        "light": "logo-dark.png"
     },
-    "welcome": {                             <4>
+    "welcome": { <4>
         "title": "Welcome to Your Workspace",
         "links": ["website", "documentation"]
     },
-    "links": {                               <5>
+    "links": { <5>
         "website": {
-            "name": "Discover CodeReady Workspaces",
-            "url": "https://developers.redhat.com/products/codeready-workspaces/overview"
+            "name": "Discover {rh-os-devspaces}",
+            "url": "https://developers.redhat.com/products/openshift_dev_spaces/overview"
         },
         "documentation": {
             "name": "Browse Documentation",
@@ -35,6 +35,7 @@ Create a `product.json` file with a new name of the product, logo, description, 
         }
     }
 }
+
 ----
 <1> `name`: tab title for the *Welcome* page and the *About* dialog.
 <2> `icon`: icon for the *Welcome* page tab title.
