--- a/modules/extensions/examples/snip_che-authenticating-with-openshift-connector-from-a-local-instance.adoc
+++ b/modules/extensions/examples/snip_che-authenticating-with-openshift-connector-from-a-local-instance.adoc
@@ -1,1 +1,1 @@
-When using a local instance of OpenShift such as CodeReady Containers, {prod-short} stores the user’s credentials in a `~/.kube/config` file in the workspace. Use this file for automatic authentication in subsequent logins. In the context of {prod-short}, the `~/.kube/config` is stored as a part of the plug-in sidecar container.
+When using a local instance of OpenShift such as {rh-os-local}, {prod-short} stores the user’s credentials in a `~/.kube/config` file in the workspace. Use this file for automatic authentication in subsequent logins. In the context of {prod-short}, the `~/.kube/config` is stored as a part of the plug-in sidecar container.
