--- a/modules/administration-guide/pages/upgrading-che-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-web-console.adoc
@@ -3,7 +3,7 @@
 :keywords: administration guide, upgrading-che-using-operatorhub
 :page-aliases:
 
-[id="upgrading-{prod-id-short}-using-the web console_{context}"]
+[id="upgrading-{prod-id-short}-using-the-web-console_{context}"]
 = Upgrading {prod-short} using the web console
 
 You can manually approve an upgrade from an earlier minor version using the {prod} Operator from the Red Hat Ecosystem Catalog in the OpenShift web console.
