--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -6,7 +6,7 @@
 [id="upgrading-{prod-id-short}-{prod-last-version-pre-dwo}-on-openshift_{context}"]
 = Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
 
-The workspace engine and authentication system used until {prod-prev-short} version {prod-last-version-pre-dwo} are deprecated. Upgrading from version {prod-last-version-pre-dwo} requires manual steps.
+The workspace engine and authentication system used up to and including {prod-prev-short} version {prod-last-version-pre-dwo} are deprecated. Upgrading from version {prod-last-version-pre-dwo} requires manual steps.
 
 .Prerequisites
 
